--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -23,36 +23,48 @@ jobs:
           script: |
             cd /home/u723134020/domains/apis.ahmakbar.site
             git clone https://github.com/ahmakbardev/umkm_api.git
-            cd /home/u723134020/domains/apis.ahmakbar.site/umkm_api
-            chmod +x ~/bin/composer
-            echo "export PATH=$HOME/bin:$PATH" >> ~/.bash_profile
-            echo "export PATH=$HOME/bin/node/bin:$PATH" >> ~/.bash_profile
-            source ~/.bash_profile
-            git add .
-            git stash
-            git pull origin main
-            which node
-            node -v
-            npm -v
-            npm i
+            cd /home/u723134020/domains/apis.ahmakbar.site
+
+            # Pastikan Node.js dan npm tersedia
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            nvm use 18 || echo "NVM tidak ditemukan, pastikan NVM sudah terinstall"
+          
+            echo "Cek versi Node.js dan NPM"
+            node -v || echo "Node.js tidak ditemukan"
+            npm -v || echo "NPM tidak ditemukan"
+          
+            # Pastikan menggunakan Composer 2
+            composer --version
+            if [[ $(composer --version) =~ "1." ]]; then
+              echo "Upgrading Composer to v2..."
+              composer self-update --2
+            fi
+          
+            # Git clone repository
+            if [ -d "umkm_api" ]; then
+              cd umkm_api
+              git pull origin main
+            else
+              git clone https://github.com/ahmakbardev/umkm_api.git
+              cd umkm_api
+            fi
+          
+            # Install dependencies
+            composer install --no-dev --optimize-autoloader
             npm install --legacy-peer-deps
             npm run prod
-            source ~/.bash_profile
-            which composer
-            composer --version
-            composer install
-            composer update
+          
             php artisan key:generate
             php artisan route:clear
             php artisan config:cache
             php artisan storage:link
             php artisan optimize
-
-             # Set permissions for storage directory
-            find /home/u723134020/domains/apis.ahmakbar.site/umkm_api/storage -type d -exec chmod 755 {} \;
-            find /home/u723134020/domains/apis.ahmakbar.site/umkm_api/storage -type f -exec chmod 644 {} \;
-
-            # rm -rf /home/u723134020/domains/apis.ahmakbar.site/public_html/
+          
+            # Set permissions
+            find storage -type d -exec chmod 755 {} \;
+            find storage -type f -exec chmod 644 {} \;
+          
             ln -s /home/u723134020/domains/apis.ahmakbar.site/umkm_api/public/* /home/u723134020/domains/apis.ahmakbar.site/public_html/
-
-            
+          
+                      
