--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,47 +24,53 @@ jobs:
             cd /home/u723134020/domains/apis.ahmakbar.site
             git clone https://github.com/ahmakbardev/umkm_api.git
             cd /home/u723134020/domains/apis.ahmakbar.site
-
+            
             # Pastikan Node.js dan npm tersedia
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            nvm use 18 || echo "NVM tidak ditemukan, pastikan NVM sudah terinstall"
-          
+            if ! command -v node &> /dev/null; then
+              echo "Node.js tidak ditemukan, menginstall..."
+              curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+              sudo apt-get install -y nodejs
+            fi
+            
             echo "Cek versi Node.js dan NPM"
-            node -v || echo "Node.js tidak ditemukan"
-            npm -v || echo "NPM tidak ditemukan"
-          
+            node -v
+            npm -v
+            
             # Pastikan menggunakan Composer 2
-            composer --version
             if [[ $(composer --version) =~ "1." ]]; then
               echo "Upgrading Composer to v2..."
-              composer self-update --2
+              mkdir -p $HOME/bin
+              curl -sS https://getcomposer.org/installer | php -- --install-dir=$HOME/bin --filename=composer
+              echo "export PATH=$HOME/bin:$PATH" >> ~/.bash_profile
+              source ~/.bash_profile
             fi
-          
-            # Git clone repository
+            
+            # Git clone atau pull repository
             if [ -d "umkm_api" ]; then
               cd umkm_api
-              git pull origin main
+              git pull origin develop
             else
               git clone https://github.com/ahmakbardev/umkm_api.git
               cd umkm_api
             fi
-          
+            
             # Install dependencies
             composer install --no-dev --optimize-autoloader
             npm install --legacy-peer-deps
             npm run prod
-          
+            
+            # Laravel setup
             php artisan key:generate
             php artisan route:clear
             php artisan config:cache
-            php artisan storage:link
+            php artisan storage:link || echo "Storage link gagal, cek manual"
             php artisan optimize
-          
+            
             # Set permissions
             find storage -type d -exec chmod 755 {} \;
             find storage -type f -exec chmod 644 {} \;
-          
-            ln -s /home/u723134020/domains/apis.ahmakbar.site/umkm_api/public/* /home/u723134020/domains/apis.ahmakbar.site/public_html/
+            
+            # Update symbolic link
+            ln -sfn /home/u723134020/domains/apis.ahmakbar.site/umkm_api/public/* /home/u723134020/domains/apis.ahmakbar.site/public_html/
           
                       
